# ngen-cal

./: .gitignore
.github/workflows/: ngen-cal.yaml  ngen-conf.yml  ngen-init-config.yml
python/ngen_cal/: pyproject.toml  setup.cfg
python/ngen_cal/docs/: plugins.md
python/ngen_cal/src/ngen/cal/: __main__.py  _hookspec.py  agent.py  calibratable.py  calibration_cathment.py  calibration_set.py  configuration.py  errors.py  ngen.py  parameter.py  search.py
python/ngen_cal/src/ngen/cal/ngen_hooks/: ngen_output.py
python/ngen_conf/: pyproject.toml
python/ngen_conf/examples/multibmi_io_graph/: main.py
python/ngen_conf/src/ngen/config/: all_formulations.py  bmi_formulation.py  realization.py  sacsma.py  snow17.py
python/ngen_conf/src/ngen/config/init_config/: casam.py  cfe.py  lgar.py  lstm.py  noahowp.py  pet.py  sacsma.py  snow17.py  soil_freeze_thaw.py  topmodel.py
python/ngen_conf/tests/: conftest.py  test_init_config_models.py
python/ngen_conf/tests/data/init_config_data/: casam.txt  cat_87_bmi_config_cfe.ini  pet.ini  sacsma.namelist  sacsma_params.txt  snow17.namelist  snow17_params.txt
python/ngen_config_gen/: pyproject.toml
python/ngen_init_config/: pyproject.toml
python/ngen_init_config/src/ngen/init_config/: core.py  units.py
python/ngen_init_config/test/: test_serializer_deserializer_straight_and_narrow.py  test_utils.py
