[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ngen.init_config"
authors = [{name = "Austin Raney", email = "araney@lynker.com"}]
description = "APIs for describing, parsing, generating, validating, and programmatically accessing NGEN model specific init_config files"
license = { file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Free To Use But Restricted",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic<2",
    "typing_extensions",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/NOAA-OWP/ngen-cal/tree/master/python/ngen_init_config"
Source = "https://github.com/NOAA-OWP/ngen-cal/tree/master/python/ngen_init_config"
Tracker = "https://github.com/NOAA-OWP/ngen-cal/issues"

[project.optional-dependencies]
develop = [
    "pytest",
    "f90nml",
    "pyyaml",
    "tomli",
    "tomli_w",
]
namelist = ["f90nml"]
yaml = ["pyyaml"]
toml = [
    "tomli",
    "tomli_w",
]
all = [
    "f90nml",
    "pyyaml",
    "tomli",
    "tomli_w",
]

[tool.setuptools.dynamic]
version = {attr = "ngen.init_config._version.__version__"}

[dependency-groups]
dev = [
    "pytest",
    "f90nml",
    "pyyaml",
    "tomli",
    "tomli_w",
]
